--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
     "firebase": "^9.10.0",
+    "pure-react-carousel": "^1.29.0",
     "react": "^18.2.0",
     "react-carousel-minimal": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.1.3",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "sass": "^1.54.8",
