--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-carousel-minimal": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.1.3",
+    "react-query": "^3.39.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
